--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -7,6 +7,10 @@
     <groupId>org.mga.compsciknights.java.foundations</groupId>
     <artifactId>foundations</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>hello-world</module>
+    </modules>
 
-    
+
 </project>
