--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -10,6 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>hello-world</module>
+        <module>variables</module>
     </modules>
 
 
