--- a/foundations/variables/pom.xml
+++ b/foundations/variables/pom.xml
@@ -10,6 +10,14 @@
     </parent>
 
     <artifactId>variables</artifactId>
+    <name>variables</name>
+    <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 
 </project>
