1_add-introductory-java-programming-examples: add sub module for object-oriented programming

--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -12,6 +12,7 @@
         <module>hello-world</module>
         <module>variables</module>
         <module>conditionals-and-iteration</module>
+        <module>objectivity</module>
     </modules>
 
     <dependencyManagement>
