1_add-introductory-java-programming-examples: add data-types-and-scope sub module

--- a/foundations/pom.xml
+++ b/foundations/pom.xml
@@ -13,6 +13,7 @@
         <module>variables</module>
         <module>conditionals-and-iteration</module>
         <module>objectivity</module>
+        <module>data-types-and-scope</module>
     </modules>
 
     <dependencyManagement>
